# CLionTemplate

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
src/: test.cpp  test.h
tests/: testTest.cpp
